Fix not all anime showing

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,69 +58,32 @@
     </div>
     {% endif %}
 
+    <h2>Backlog</h2>
     <div class="row anime-list">
         {% for anime in anime_list if anime._anilist and not anime.up_to_date %}
-        <div class="col l12 xl6">
-            <div class="anime row">
-                <div class="col s3 l5">
-                    <img class="cover" src="{{ anime.image }}">
-                </div>
-                <div class="col s9 l7">
-                    <div class="title">{{ anime.title }} ({{ anime.watched_episodes }} / {{ anime.total_episodes or "?"
-                        }})
-                    </div>
-                    <div class="season">{{ anime.season }}</div>
-                    <div class="episodes">
-                        {% for ep in (anime.not_watched_episodes[:10] if anime.not_watched_episodes else []) %}
-                        <a href="{{ urlize(anime, ep) }}" class="btn" target="_blank">{{ ep }}</a>
-                        {% endfor %}
-                        {% if anime.not_watched_episodes and anime.not_watched_episodes[10:] %}...{% endif %}
-                    </div>
-                    {% if anime.time_until_next_episode %}
-                    <div class="next">
-                        Next episode in {{ anime.time_until_next_episode.days }} days,
-                        {{ anime.time_until_next_episode.seconds // (60 * 60) }} hours.
-                    </div>
-                    {% endif %}
-                    <div class="websites">
-                        <a href="{{ anime.mal_url }}" class="btn mal" target="_blank">MAL</a>
-                        <a href="{{ anime.anilist_url }}" class="btn anilist" target="_blank">AniList</a>
-                        <a href="{{ anime.google_url }}" class="btn google" target="_blank">Google</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% include "_anime.html" %}
         {% endfor %}
+    </div>
+
+    <h2>Up to date</h2>
+    <div class="row anime-list">
+        {% for anime in anime_list if anime._anilist and anime.up_to_date %}
+        {% include "_anime.html" %}
+        {% endfor %}
+    </div>
+
+    <h2>Missing data</h2>
+    <div>
+        <ul class="collection">
+            {% for anime in anime_list if not anime._anilist or anime._anilist.episodes == None %}
+            <li class="collection-item"><a href="{{ anime.mal_url }}">MAL #{{ anime._mal.id }}</a> {{ anime.title }}
+            </li>
+            {% endfor %}
+        </ul>
     </div>
 </div>
 
 <style>
-    .anime {
-        width: 95%;
-        box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px;
-        border-radius: 3px;
-        height: 300px;
-        overflow-y: auto;
-    }
-
-    .anime .cover {
-        width: 100%;
-        max-height: 200px;
-        min-height: 150px;
-        min-width: 100px;
-        object-fit: contain;
-    }
-
-    .anime .title {
-        font-size: 1.25em;
-        margin-bottom: .5em;
-    }
-
-    .anime .episodes,
-    .anime .websites {
-        margin: 1.5em 0;
-    }
-
     .subtitle {
         text-align: center;
         color: darkgray;
