--- a/app/templates/_anime.html
+++ b/app/templates/_anime.html
@@ -65,8 +65,11 @@
         margin: 1.5em 0;
     }
 
-    .anime .websites .btn {
+    .anime .btn {
         margin-bottom: .5em;
+    }
+
+    .anime .websites .btn {
         font-size: .9em;
         padding: 0 .7em;
     }
