--- a/app/templates/_anime.html
+++ b/app/templates/_anime.html
@@ -1,4 +1,4 @@
-<div class="col l12 xl6">
+<div class="anime-entry col l12 xl6">
     <div class="anime row">
         <div class="col s3 l5 cover-container">
             <img class="cover" src="{{ anime.image }}">
@@ -31,6 +31,10 @@
 </div>
 
 <style>
+    .anime-entry {
+         width: 100%;
+    }
+
     .anime {
         width: 95%;
         box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 10px;
