Use web route for anime list, add name to url

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 
-    <form method="get">
+    <form method="get" action="{{ url_for('index') }}">
         <div class="row">
             <div class="col s10">
                 <div class="input-field">
