--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,6 +57,16 @@
         </div>
     </form>
 
+    <div class="row">
+        {% for msg in get_flashed_messages() %}
+        <div class="col s12">
+            <div class="card-panel orange">
+                <span class="white-text">{{ msg }}</span>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
     {% if username %}
     <div class="row">
         <p>
