Set empty favicon

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{{ config.app_name }}</title>
     <meta viewport="width=device-width, initial-scale=1">
+    <link rel="icon" href="data:," />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
